--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,20 @@
 @tailwind base;
+@layer base {
+  body {
+    @apply bg-primary text-white;
+  }
+  h1 {
+    @apply text-5xl font-semibold my-8;
+  }
+  h2 {
+    @apply text-xl my-8;
+  }
+  h3 {
+    @apply text-lg my-8;
+  }
+}
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+}
