--- a/components/LoadingSpinner/spinner.module.css
+++ b/components/LoadingSpinner/spinner.module.css
@@ -14,7 +14,7 @@
   border: 8px solid #fff;
   border-radius: 50%;
   animation: ldsring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #000 transparent transparent transparent;
+  border-color: #fff transparent transparent transparent;
 }
 .ldsring div:nth-child(1) {
   animation-delay: -0.45s;
