--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -1,6 +1,5 @@
-.wrapper {
+/* .wrapper {
   position: relative;
-  z-index: -1;
   height: 100vh;
   background-color: rgb(0, 0, 0);
 }
@@ -8,6 +7,7 @@
 .wrapper::before {
   content: "";
   position: absolute;
+  z-index: -1;
   top: 0px;
   right: 0px;
   bottom: 0px;
@@ -16,4 +16,4 @@
   background-size: cover;
   background-position: top center;
   opacity: 0.3;
-}
+} */
