--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -2,7 +2,6 @@
   position: relative;
   height: 100vh;
   z-index: 2;
-  background-color: #ffe6dd;
 }
 
 .wrapper::before {
@@ -13,8 +12,7 @@
   right: 0px;
   bottom: 0px;
   left: 0px;
-  background-image: url("../assets/ilustrations/draw2.svg");
+  background-image: url("../assets/ilustrations/bg1.jpg");
   background-size: cover;
   background-position: top center;
-  opacity: 0.3;
 }
